- basename() is not supposed to modify the string it is passed and should
  return a pointer to a string which can be modified. Now it does. Same
  thing for dirname().

- asctime_r() now returns NULL if the buffer is too short to hold even a single
  byte of data.

c.lib 1.201 (21.9.2006)

- If defined, the local environment variable "DISABLE_COMMANDLINE_WILDCARD_EXPANSION"
  will disable expansion of wildcard patterns passed on the command line.
  Note that if the variable is not set then the global variable
  '__expand_wildcard_args' will provide the defaults for the switch that
  controls whether the wildcard expansion takes place. And after the
  environment variable has been checked, the '__expand_wildcard_args_check'
  function pointer can still be used to override the switch.

- fstat() now works with "NIL:" and "/dev/null", respectively. Not that
  it returns much useful information, though.

- The _PC_MAX_INPUT query for file handles now returns the default
  buffer size.

- Integrated the new OS4 build makefile collection, as contributed by
  Steven Solie. Thank you very much!

- Added the missing strerror_r() function.

- fpathconf() should work with the stdio streams, even in the thread-safe
  library version, again.

- Updated m68k specs file in /documentation to contain an own __CLIB2__
  define so that existing m68k compilers also have this define. In addition,
  the common "-noixemul" option can now also be specified but will do a NOP
  so that Makefiles sharing multiple runtime lib setups work without
  a warning.

- Added a new callback function which can be used in programs which want
  to avoid that the command line wildcard expansion takes place.  

- __get_default_file() now dynamically fills in file handles for the
  stdin/stdout/stderr streams if it's part of the thread-safe library.

- fpathconf() now checks if the file descriptor is really referring to a file.

- The termios hook entry code could file descriptor's embedded file handle